Fixed Gap Issue At End Of Site

--- a/styles/main.css
+++ b/styles/main.css
@@ -6,3 +6,6 @@
     color: red;
     transition: 0.5s;
 }
+footer{
+    margin-bottom: -20px;
+}
